--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,21 @@ section#page {
     font-size: 12px;
     margin-top: 10px; }
 
+.result-full {
+  font-size: 16px;
+  font-family: Quicksand, sans-serif; }
+  .result-full img.thumb {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 7px rgba(0, 0, 0, 0.1); }
+  .result-full .row {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+    .result-full .row .result-field-label {
+      font-weight: bold;
+      text-align: right;
+      opacity: .3; }
+    .result-full .row .col {
+      padding: 10px; }
+
 footer {
   background: #f5f5f5;
   color: #CCC;
