--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,17 @@ h1, h2, h3, h4 {
 h2, h3, h4 {
   color: rgba(0, 0, 0, 0.2); }
 
-a {
+a,
+a:hover,
+a:active {
   text-decoration: none; }
+
+a {
+  color: #93DAFE; }
+
+a:hover {
+  background: #FFCC00;
+  color: white; }
 
 header {
   background: #93DAFE;
@@ -31,6 +40,24 @@ section#page {
     font-weight: bold; }
   section#page .form-auth .btn-password-forgot:hover, section#page .form-register .btn-password-forgot:hover {
     color: rgba(0, 0, 0, 0.8); }
+  section#page .create-menu ul, section#page .create-menu li {
+    list-style: none;
+    margin: 0;
+    padding: 0; }
+  section#page .create-menu .section-title {
+    background-color: #93DAFE;
+    color: #FFF;
+    display: block;
+    padding: 6px 12px;
+    font-size: 18px;
+    margin: 4px; }
+  section#page .create-menu .section-content {
+    margin: 4px; }
+    section#page .create-menu .section-content a {
+      display: block;
+      padding: 5px; }
+  section#page .create-advanced {
+    margin: 20px auto; }
 
 .search-results .search-results-item {
   padding: 10px 0 10px 0;
@@ -38,8 +65,8 @@ section#page {
   .search-results .search-results-item a.uri {
     color: #93DAFE; }
   .search-results .search-results-item .detail {
-    color: #555;
-    font-size: 12px;
+    color: #AAA;
+    font-size: 14px;
     margin-top: 10px; }
 
 .result-full {
